<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypelayout="1.0"?>
<package format="3">
  <name>d435_slam_ros2</name>
  <version>1.0.0</version>
  <description>ORB-SLAM3 with D435 camera for ROS 2</description>
  <maintainer email="your-email@example.com">Your Name</maintainer>
  <license>GPL-3.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rcl_interfaces</depend>  
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>  
  <depend>nav_msgs</depend> 
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  
  <depend>pcl</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
